--- a/css/output.css
+++ b/css/output.css
@@ -723,8 +723,17 @@ video {
   clear: none;
 }
 
+.mx-0 {
+  margin-left: 0px;
+  margin-right: 0px;
+}
+
 .mt-2 {
   margin-top: 0.5rem;
+}
+
+.mt-\[30px\] {
+  margin-top: 30px;
 }
 
 .box-border {
@@ -830,6 +839,14 @@ video {
   height: 100%;
 }
 
+.w-\[430px\] {
+  width: 430px;
+}
+
+.w-\[80\%\] {
+  width: 80%;
+}
+
 .w-\[900px\] {
   width: 900px;
 }
@@ -844,6 +861,14 @@ video {
 
 .w-\[weird-and-invalid\] {
   width: weird-and-invalid;
+}
+
+.w-\[\] {
+  width: ;
+}
+
+.max-w-\[195px\] {
+  max-width: 195px;
 }
 
 .max-w-\[413px\] {
@@ -1854,9 +1879,19 @@ video {
   background-color: rgb(0 0 0 / var(--tw-bg-opacity, 1));
 }
 
+.bg-\[\#010231\] {
+  --tw-bg-opacity: 1;
+  background-color: rgb(1 2 49 / var(--tw-bg-opacity, 1));
+}
+
 .bg-\[\#f2f2f2\] {
   --tw-bg-opacity: 1;
   background-color: rgb(242 242 242 / var(--tw-bg-opacity, 1));
+}
+
+.bg-\[\#ffcd11\] {
+  --tw-bg-opacity: 1;
+  background-color: rgb(255 205 17 / var(--tw-bg-opacity, 1));
 }
 
 .bg-\[\#fff\] {
@@ -1992,6 +2027,10 @@ video {
   padding: 10px 12px;
 }
 
+.p-\[10px_16px\] {
+  padding: 10px 16px;
+}
+
 .p-\[12px_0\] {
   padding: 12px 0;
 }
@@ -2002,6 +2041,10 @@ video {
 
 .p-\[30px_0_30px_0\] {
   padding: 30px 0 30px 0;
+}
+
+.p-\[36px_0_33px_26px\] {
+  padding: 36px 0 33px 26px;
 }
 
 .p-\[80px_20px\] {
@@ -2021,6 +2064,11 @@ video {
 .px-5 {
   padding-left: 1.25rem;
   padding-right: 1.25rem;
+}
+
+.py-\[21px\] {
+  padding-top: 21px;
+  padding-bottom: 21px;
 }
 
 .text-left {
@@ -2099,8 +2147,16 @@ video {
   font-size: 20px;
 }
 
+.text-\[22px\] {
+  font-size: 22px;
+}
+
 .text-\[24px\] {
   font-size: 24px;
+}
+
+.text-\[38px\] {
+  font-size: 38px;
 }
 
 .text-\[48px\] {
@@ -2113,6 +2169,10 @@ video {
 
 .font-\[500\] {
   font-weight: 500;
+}
+
+.font-\[900\] {
+  font-weight: 900;
 }
 
 .font-bold {
@@ -2609,11 +2669,12 @@ video {
     flex-direction: column;
     justify-content: center;
     align-items: center;
+    z-index: 999;
     background-color: rgb(255, 255, 255);
     transition: 0.7s;
   }
 
-  #check:checked ~ .menu{
+  #check:checked ~ .menu {
     left: 0;
   }
 }
@@ -2624,20 +2685,35 @@ video {
 }
 
 .swiper-slide {
-  text-align: center;
   font-size: 18px;
   background: #fff;
   display: flex;
   justify-content: center;
-  align-items: center;
 }
 
 .swiper-slide img {
   display: block;
-  width: 100%;
   height: 100%;
   -o-object-fit: cover;
      object-fit: cover;
+}
+
+.card-1 {
+  background-image: url(../img/card1.png);
+  background-position: center;
+  background-repeat: no-repeat;
+}
+
+.card-2 {
+  background-image: url(../img/card2.png);
+  background-position: center;
+  background-repeat: no-repeat;
+}
+
+.card-3 {
+  background-image: url(../img/card3.png);
+  background-position: center;
+  background-repeat: no-repeat;
 }
 
 @media (min-width: 640px) {
@@ -2746,9 +2822,135 @@ video {
   }
 }
 
+@media (max-width: 970px) {
+  .max-\[970px\]\:w-full {
+    width: 100%;
+  }
+}
+
+@media (max-width: 950px) {
+  .max-\[950px\]\:flex {
+    display: flex;
+  }
+
+  .max-\[950px\]\:w-full {
+    width: 100%;
+  }
+
+  .max-\[950px\]\:flex-col {
+    flex-direction: column;
+  }
+
+  .max-\[950px\]\:rounded-\[16px\] {
+    border-radius: 16px;
+  }
+
+  .max-\[950px\]\:rounded-\[\] {
+    border-radius: ;
+  }
+
+  .max-\[950px\]\:rounded-\[0\] {
+    border-radius: 0;
+  }
+}
+
+@media (max-width: 870px) {
+  .max-\[870px\]\:w-full {
+    width: 100%;
+  }
+
+  .max-\[870px\]\:flex-col {
+    flex-direction: column;
+  }
+
+  .max-\[870px\]\:rounded-\[0\] {
+    border-radius: 0;
+  }
+
+  .max-\[870px\]\:rounded-\[\] {
+    border-radius: ;
+  }
+
+  .max-\[870px\]\:rounded-\[1\] {
+    border-radius: 1;
+  }
+
+  .max-\[870px\]\:rounded-\[16px_16px_0_0\] {
+    border-radius: 16px 16px 0 0;
+  }
+
+  .max-\[870px\]\:rounded-\[1px\] {
+    border-radius: 1px;
+  }
+
+  .max-\[870px\]\:p-\[\] {
+    padding: ;
+  }
+
+  .max-\[870px\]\:p-\[20px\] {
+    padding: 20px;
+  }
+
+  .max-\[870px\]\:p-\[20px_0\] {
+    padding: 20px 0;
+  }
+}
+
 @media (max-width: 800px) {
   .max-\[800px\]\:hidden {
     display: none;
+  }
+}
+
+@media (max-width: 650px) {
+  .max-\[650px\]\:m-auto {
+    margin: auto;
+  }
+
+  .max-\[650px\]\:w-full {
+    width: 100%;
+  }
+
+  .max-\[650px\]\:justify-center {
+    justify-content: center;
+  }
+
+  .max-\[650px\]\:text-center {
+    text-align: center;
+  }
+}
+
+@media (max-width: 500px) {
+  .max-\[500px\]\:w-full {
+    width: 100%;
+  }
+
+  .max-\[500px\]\:text-center {
+    text-align: center;
+  }
+
+  .max-\[500px\]\:text-\[25px\] {
+    font-size: 25px;
+  }
+}
+
+@media (max-width: 435px) {
+  .max-\[435px\]\:text-\[30px\] {
+    font-size: 30px;
+  }
+
+  .max-\[435px\]\:text-\[\] {
+    color: ;
+  }
+}
+
+@media (max-width: 328px) {
+  .max-\[328px\]\:text-\[25px\] {
+    font-size: 25px;
+  }
+
+  .max-\[328px\]\:text-\[\] {
+    color: ;
   }
 }
 
