--- a/css/style.css
+++ b/css/style.css
@@ -21,11 +21,12 @@
     flex-direction: column;
     justify-content: center;
     align-items: center;
+    z-index: 999;
     background-color: rgb(255, 255, 255);
     transition: 0.7s;
   }
 
-  #check:checked ~ .menu{
+  #check:checked ~ .menu {
     left: 0;
   }
 }
@@ -36,17 +37,29 @@
 }
 
 .swiper-slide {
-  text-align: center;
   font-size: 18px;
   background: #fff;
   display: flex;
   justify-content: center;
-  align-items: center;
 }
 
 .swiper-slide img {
   display: block;
-  width: 100%;
   height: 100%;
   object-fit: cover;
+}
+.card-1 {
+  background-image: url(../img/card1.png);
+  background-position: center;
+  background-repeat: no-repeat;
+}
+.card-2 {
+  background-image: url(../img/card2.png);
+  background-position: center;
+  background-repeat: no-repeat;
+}
+.card-3 {
+  background-image: url(../img/card3.png);
+  background-position: center;
+  background-repeat: no-repeat;
 }
